add filter, listener

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,20 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>DoublePostingPreventingFilter</filter-name>
+        <filter-class>com.epam.hrsystem.controller.filter.DoublePostingPreventingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>DoublePostingPreventingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+    <listener>
+        <listener-class>com.epam.hrsystem.controller.listener.SessionListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>Login</servlet-name>
         <jsp-file>/WEB-INF/jsp/authorization/login.jsp</jsp-file>
@@ -55,6 +69,15 @@
     <servlet-mapping>
         <servlet-name>Register</servlet-name>
         <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>DoublePostingError</servlet-name>
+        <jsp-file>/WEB-INF/jsp/error/double_posting_error.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DoublePostingError</servlet-name>
+        <url-pattern>/double_posting_error</url-pattern>
     </servlet-mapping>
 
 
