--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,9 +45,8 @@
     </filter>
     <filter-mapping>
         <filter-name>SaveUrlFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>*.do</url-pattern>
     </filter-mapping>
-
 
     <listener>
         <listener-class>com.epam.hrsystem.controller.listener.SessionListener</listener-class>
