--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,15 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/error/404_error.jsp</location>
+    </error-page>
+    <!--<error-page>
+        <exception-type>java.lang.RuntimeException</exception-type>
+        <location>/jsp/error.jsp</location>
+    </error-page>-->
+
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.epam.hrsystem.controller.filter.EncodingFilter</filter-class>
