--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <location>/WEB-INF/jsp/error/404_error.jsp</location>
     </error-page>
     <error-page>
+        <error-code>405</error-code>
+        <location>/WEB-INF/jsp/error/405_error.jsp</location>
+    </error-page>
+    <error-page>
         <error-code>500</error-code>
         <location>/WEB-INF/jsp/error/500_error.jsp</location>
     </error-page>
