--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>MessageFilter</filter-name>
+        <filter-class>com.epam.hrsystem.controller.filter.MessageFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MessageFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>com.epam.hrsystem.controller.listener.SessionListener</listener-class>
     </listener>
